; ModuleID = '/home/carl/AnghaBench/git/t/helper/extr_test-string-list.c_parse_string_list.c'
source_filename = "/home/carl/AnghaBench/git/t/helper/extr_test-string-list.c_parse_string_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"-\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.string_list*, i8*)* @parse_string_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_string_list(%struct.string_list* %0, i8* %1) #0 {
  %3 = alloca %struct.string_list*, align 8
  %4 = alloca i8*, align 8
  store %struct.string_list* %0, %struct.string_list** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = call i32 @strcmp(i8* %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %13

9:                                                ; preds = %2
  %10 = load %struct.string_list*, %struct.string_list** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @string_list_split(%struct.string_list* %10, i8* %11, i8 signext 58, i32 -1)
  br label %13

13:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @string_list_split(%struct.string_list*, i8*, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
